Made some styling changes, fixed some of the styling on Mobile, and changed up the text on the About me section.

--- a/client/src/components/Footer/style.css
+++ b/client/src/components/Footer/style.css
@@ -58,9 +58,10 @@ footer p{
 
 @media (max-width: 640px) {
     footer {
-        height: 5rem;
+        height: 2.5rem;
         font-size: 16px;
-        flex-direction: column;
+        flex-direction: row;
+        justify-content: space-evenly;
     }
 
     .footerSocial {
