--- a/client/src/components/Nav/style.css
+++ b/client/src/components/Nav/style.css
@@ -96,8 +96,8 @@ button:focus {
     }
 
     .nav-link {
-        margin: 5px 10px;
-        font-size: 18px;
+        margin: 5px 0px 5px 10px;
+        font-size: 36px;
     }
 }
 
