--- a/client/src/pages/Portfolio/portfolio.css
+++ b/client/src/pages/Portfolio/portfolio.css
@@ -266,10 +266,6 @@
         width: 24px;
     }
 
-    h2 {
-        font-size: 35px;
-    }
-
     .repoLink {
         font-size: 17px;
     }
